# wgpu-basics

./: Cargo.toml
models/maya/: maya.mtl
shad/: global_bindings.wgsl  phong.wgsl  test.wgsl
shad/csm/: phong.wgsl
shad/materials/: phong_solid.wgsl  phong_textured.wgsl
shad/phong/: cascaded_shadow_map.wgsl  light_functions.wgsl  main.wgsl  material_bindings.wgsl  vertex_output.wgsl
shad/screenspace/: postprocess.wgsl
shad/shadow/: csm.wgsl
shad/skybox/: simple.wgsl
shaders/: global_bindings.wgsl  phong.wgsl  phongTextured.wgsl  phongTexturedNormal.wgsl  postprocess.wgsl  shadowMap.wgsl  shadowMapPNTBUV.wgsl  shadowMapPNUV.wgsl  showTexture.wgsl  skybox.wgsl  ssaoForward.wgsl  vertex_data.wgsl
shaders/compute/: blur.wgsl
shaders/deferred/: bindings.wgsl  functions.wgsl  geometry.wgsl  phong.wgsl  ssao.wgsl  vertex_output.wgsl
shaders/forward/: cascaded_shadow_map.wgsl  geometry.wgsl  phong.wgsl
shaders/instances/: model.wgsl
shaders/materials/: phong_solid.wgsl  phong_textured.wgsl
shaders/phong/: bindings.wgsl  cascaded_shadow_map.wgsl  definitions.wgsl  fragment.wgsl  functions.wgsl  light_defs.wgsl  light_functions.wgsl
src/: camera.rs  gpu.rs  gpu_context.rs  light.rs  light_scene.rs  main.rs  material.rs  mesh.rs  model.rs  phong_light.rs  phong_pass.rs  postprocess_pass.rs  projection.rs  render_context.rs  scene.rs  scene_uniform.rs  settings.rs  shader_compiler.rs  shadow_pass.rs  shapes.rs  skybox_pass.rs  test_scenes.rs  ui.rs  ui_pass.rs  world_model.rs
src/compute/: blur_pass.rs  mod.rs
src/deferred/: debug_pass.rs  fill_pass.rs  (+4 more)
(+20 files in other folders)
