[package]
name = "gpu-basics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bytemuck = { version = "1.14.0", features = ["derive"] }
encase = { version = "0.7.0", features = ["nalgebra"] }
itertools = "0.12.0"
nalgebra = { version = "0.32.3", features = ["bytemuck"] }
tokio = { version = "1.35.1", features = ["full"] }
wgpu = { version = "0.18.0", features = ["wgc"] }
winit = { version = "0.29.8", features = ["rwh_05"] }
